@@ -323,11 +323,13 @@ gst_ttml_state_restore_attr_stack (GstTTMLState *state, const gchar *id)
     return;
 
   if (state->saved_attr_stacks) {
-    if (!g_hash_table_lookup_extended (state->saved_attr_stacks, id, NULL,
-          (gpointer *)&attr_link)) {
-      GST_WARNING ("Undefined style '%s'", id);
-      return;
-    }
+    g_hash_table_lookup_extended (state->saved_attr_stacks, id, NULL,
+        (gpointer *)&attr_link);
+  }
+
+  if (!attr_link) {
+    GST_WARNING ("Undefined style '%s'", id);
+    return;
   }
 
   GST_DEBUG ("Applying style '%s'", id);
